WebCore/dom/ContainerNode.cpp
@@ -323,7 +323,6 @@ bool ContainerNode::replaceChild(PassRefPtr<Node> newChild, Node* oldChild, Exce
         child = nextChild.release();
     }
 
-    // ### set style in case it's attached
     document()->setDocumentChanged(true);
     dispatchSubtreeModifiedEvent();
     return true;
@@ -577,6 +576,7 @@ ContainerNode* ContainerNode::addChild(PassRefPtr<Node> newChild)
     m_lastChild = newChild.get();
     allowEventDispatch();
 
+    document()->incDOMTreeVersion();
     if (inDocument())
         newChild->insertedIntoDocument();
     if (document()->hasNodeLists())
