WebCore/dom/Element.cpp
@@ -461,8 +461,7 @@ void Element::setAttribute(const String& name, const String& value, ExceptionCod
         return;
     }
     
-    if (inDocument())
-        document()->incDOMTreeVersion();
+    document()->incDOMTreeVersion();
 
     if (localName == idAttr.localName())
         updateId(old ? old->value() : nullAtom, value);
@@ -479,8 +478,7 @@ void Element::setAttribute(const String& name, const String& value, ExceptionCod
 
 void Element::setAttribute(const QualifiedName& name, StringImpl* value, ExceptionCode& ec)
 {
-    if (inDocument())
-        document()->incDOMTreeVersion();
+    document()->incDOMTreeVersion();
 
     // allocate attributemap if necessary
     Attribute* old = attributes(false)->getAttributeItem(name);
@@ -511,8 +509,7 @@ Attribute* Element::createAttribute(const QualifiedName& name, StringImpl* value
 
 void Element::setAttributeMap(NamedAttrMap* list)
 {
-    if (inDocument())
-        document()->incDOMTreeVersion();
+    document()->incDOMTreeVersion();
 
     // If setting the whole map changes the id attribute, we need to call updateId.
 
