WebCore/dom/EventTargetNode.cpp
@@ -118,6 +118,8 @@ bool EventTargetNode::dispatchSubtreeModifiedEvent(bool sendChildrenChanged)
 {
     ASSERT(!eventDispatchForbidden());
     
+    document()->incDOMTreeVersion();
+
     // FIXME: Pull this whole if clause out of this function.
     if (sendChildrenChanged) {
         notifyNodeListsChildrenChanged();
